# system-info

./: .gitignore  CHANGELOG.md  README.md  changelog  package.yaml  stack.yaml  system-info.cabal
csrc/: uname.c  wmi.c
src/System/: Information.hs  OS.hs
