name:                system-info
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ChaosGroup/system-info#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Taskoff
maintainer:          daniel.taskoff@chaosgroup.com
copyright:           2016 ChaosGroup
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     System.Information
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-uni-patterns

test-suite system-info-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , system-info
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChaosGroup/system-info
